added a image for maping system

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
  <div id="wrapper">
        <section id="cowWeight-mitter">
+        <div id="cow-map" >
+            <img src="cow-map.png" alt="system of cow map ">
+        </div>
+
 <div class="cowMitter-ttl">
     <h1>গরু ও মহিষের ওজন মাপার মিটার </h1>
 </div>
